<resources>
    <string name="app_name">Come to EAT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="error_unknown_error">Une erreur est survenue</string>
    <string name="logout">logout</string>
    <string name="login">Login</string>
    <string name="title_recipe_list">Recipes</string>
    <string name="title_selected_recipe">Selected </string>
    <string name="title_user_list">Friends</string>
    <string name="recipe_image">Recipe image</string>
    <string name="recipe">Recipe</string>
    <string name="diet_label">Diet label</string>
    <string name="health_label">Health label</string>
    <string name="submit">Send</string>
    <string name="invitation_date">Invitation date</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="cancel">Cancel</string>

    <!-- Notification String-->
    <string name="channel_id" translatable="false">ch.enyo.openclassrooms.comeToEat-channel</string>
    <string name="channel_name" translatable="false">comeToEat</string>
    <string name="max_ingredient">Max nbr of ingredient</string>
    <string name="cuisine_type">Type of cuisine</string>
    <string name="meal_type">Type of meal</string>
    <string name="dish_type">Type of dish</string>
    <string name="search">Search</string>
    <string name="search_basis">Search Basis</string>
    <string name="exclude">Ingredient to exclude</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="cancel_button">Cancel</string>
    <string name="search_button">Search</string>

    <string name="user_profile_image">User profile</string>
    <string name="text_view_email">User email</string>
    <string name="text_input_username">User name</string>
    <string name="button_update_account">Upate</string>
    <string name="button_sign_out_account">Sign out</string>
    <string name="button_delete_account">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="friends_profile">Friends profile</string>
    <string name="friends_default_decision">No choice for now</string>
    <string name="user_profile">User profile</string>
    <string name="selected_recipe_image">Selected recipe image</string>
    <string name="recipe_name">Recipe name</string>
    <string name="recipe_label">Recipe label</string>
    <string name="host">Host name</string>
    <string name="nb_workmate_selection" translatable="false">(%1$s)</string>
    <string name="nb_of_participant" translatable="false">(%1$s)</string>
    <string name="participant_icon">Image participant</string>
    <string name="popup_message_confirmation_delete_account">Are you sure to delete you account ?</string>
    <string name="popup_message_choice_yes">YES</string>
    <string name="popup_message_choice_no">NO</string>
    <string name="user_name">User name</string>
    <string name="info_no_username_found">No user name fund</string>
    <string name="search_dialog">Search dialog</string>
    <string name="selected_recipe_detail">selected recipe detail</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="participants">Participants</string>
    <string name="selected_recipe_health_label">Health label</string>
    <string name="rrecipe_detail">Recipe details</string>
    <string name="recipe_detail">Recipe details</string>
    <string name="diet_type">Diet type : </string>
    <string name="health_spinner_text">Health label :</string>


    <string-array name="diet_type">
        <item>"--"</item>
        <item>balanced</item>
        <item>high-fiber</item>
        <item>high-protein</item>
        <item>how-carb</item>
        <item>how-fat</item>
        <item>how-sodium</item>
    </string-array>

    <string-array name="health">
        <item>"--"</item>
        <item>vegetarian</item>
    </string-array>

    <string-array name="meal_type">
        <item>none</item>
        <item>breakfast</item>
        <item>dinner</item>
        <item>lunch</item>
        <item>snack</item>
    </string-array>
</resources>
