<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />

        <variable
            name="selectedRecipe"
            type="ch.enyo.openclassrooms.comeToEat.utils.SelectedRecipe" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="1dp"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true"
        android:background="@color/iron">

       <!-- <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_restaurant_layout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:padding="5dp">


            <!--RECIPE PARTICIPANT IMAGE-->

            <!--RECIPE NAME-->
            <ImageView
                android:id="@+id/item_recipe_imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/selected_recipe_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/item_recipe_host"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.538"
                app:srcCompat="@drawable/ic_lunch" />

            <TextView
                android:id="@+id/item_recipe_name"
                android:layout_width="155dp"
                android:layout_height="23dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/recipe_name"
                android:textColor="@color/design_default_color_on_secondary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--RECIPE LABEL-->
            <TextView
                android:id="@+id/item_recipe_label"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/recipe_label"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_recipe_name" />

            <TextView
                android:id="@+id/item_recipe_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:text="@string/invitation_date"
                android:textColor="@color/fui_bgEmail"
                android:textSize="15sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toStartOf="@+id/item_recipe_imageView"
                app:layout_constraintTop_toBottomOf="@+id/item_recipe_participants_images" />

            <!--RECIPE HOST NAME -->

            <!--PARTICIPANTS-->
            <TextView
                android:id="@+id/item_recipe_host"
                android:layout_width="93dp"
                android:layout_height="16dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="2dp"
                android:text="@string/host"
                app:layout_constraintEnd_toStartOf="@+id/item_recipe_imageView"
                app:layout_constraintStart_toEndOf="@+id/item_recipe_name"
                app:layout_constraintTop_toTopOf="parent" />

            <!--PARTICIPANTS IMAGE-->
            <TextView
                android:id="@+id/item_recipe_participants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="5dp"
                android:text="@string/nb_of_participant"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/item_recipe_imageView"
                app:layout_constraintStart_toEndOf="@+id/item_recipe_participants_images"
                app:layout_constraintTop_toBottomOf="@+id/item_recipe_host" />

            <ImageView
                android:id="@+id/item_recipe_participants_images"
                android:layout_width="31dp"
                android:layout_height="28dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:contentDescription="@string/participant_icon"
                app:layout_constraintEnd_toStartOf="@+id/item_recipe_participants"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_recipe_host"
                app:srcCompat="@drawable/ic_participant" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>