<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/date_dialog_title_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/iron">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/dialog_title"
            android:gravity="center"

            android:hint="@string/invitation_date"

            />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView

        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_invitation_date"
        android:gravity="center"
        android:layout_margin="50dp"
        android:hint="@string/invitation_date"
        android:textColor="@color/fui_bgGitHub"
        android:background="@drawable/custom_text_view"
        android:layout_marginEnd="5dp"

        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/noBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="50dp"
            android:text="@string/no" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yesBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="@string/ok" />
    </LinearLayout>


</LinearLayout>
