<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="recipe"
            type="ch.enyo.openclassrooms.comeToEat.models.Recipe" />

    </data>


<androidx.cardview.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="1dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardUseCompatPadding="true"
    android:background="@color/iron">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--RECIPE PHOTO-->

        <ImageView
            android:id="@+id/recipe_imageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="50"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/recipe_image"
            android:src="@drawable/ic_image"
            />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_recipe_data"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp">


            <!--Recipe name or Label -->

            <TextView
                android:id="@+id/item_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/recipe"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Diet label-->
            <TextView
                android:id="@+id/recipe_diet_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/diet_label"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_recipe_name" />

            <!--Health label-->

            <TextView
                android:id="@+id/item_recipe_hearth_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/health_label"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/green"
                app:layout_constraintTop_toBottomOf="@+id/recipe_diet_label"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <!--SEPARATION-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="5dp" />

</androidx.cardview.widget.CardView>


</layout>